fix : mainNavbar header align

--- a/src/css/CharacterCard.css
+++ b/src/css/CharacterCard.css
@@ -25,6 +25,13 @@
     border: white solid 1em;
 }
 
+.characterCard:hover .__character_profile {
+    width: 50%;
+    height: auto;
+    left:20%;
+    transition: 0.3s ease;
+}
+
 .characterCard .__info {
     background-color: white;
     display: flex;
