--- a/src/css/MainNavBar.css
+++ b/src/css/MainNavBar.css
@@ -1,11 +1,11 @@
 #main-nav-bar {
     display: grid;
-    grid-template-columns: 1fr 5fr 2fr;
+    grid-template-columns: 1fr 6fr 1fr;
     align-items: center;
     position: fixed;
+    left: 5%;
     width: 90%;
     z-index: 100;
-    margin: 0 auto;
     background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -96,6 +96,10 @@
 
 .router-link-active{
     text-decoration: none;
+}
+
+.__go_sign {
+    text-align: right;
 }
 
 .__go_sign *{
